--- a/Starting website/index.html
+++ b/Starting website/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-    <meta name="description" content="une agence web designer situer à lyon.votre entreprise pourra être visible sur internet">
+    <meta name="description" content="une agence web designer situé à lyon. Votre entreprise pourra être visible sur internet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
