--- a/Starting website/index.html
+++ b/Starting website/index.html
@@ -12,12 +12,13 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
-   
-	
+   <!--
+	<script src="./js/jquery-2.1.0.js"></script>
+	<script src="./js/bootstrap.js"></script>
+	<script src="./js/blocs.js"></script>
+	<script src="./js/jquery.touchSwipe.js" defer></script>
+	<script src="./js/gmaps.js"></script>-->
 
-	
-	
-	
 
     <title>La chouette agence </title>
 
@@ -295,11 +296,7 @@
 </div>
 <!-- Principal conteneur END -->
 
-<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js"></script>
-	<script src="./js/gmaps.js"></script>
+
     
 
 </body>
