--- a/Starting website/index.html
+++ b/Starting website/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+	<!--<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">-->
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
@@ -292,12 +292,7 @@
 	</div>
 </div>
 <!-- Footer - bloc-8 END -->
-
 </div>
 <!-- Principal conteneur END -->
-
-
-    
-
 </body>
 </html>
